button overlap fixed

--- a/src/app/components/list.component/list.component.scss
+++ b/src/app/components/list.component/list.component.scss
@@ -10,6 +10,7 @@
   right: 0;
   left: 0;
   bottom: 1em;
+  width: 100px;
 }
 
 ::ng-deep .resume-drawer {
